[gd_scene load_steps=30 format=3 uid="uid://d3d0n530pnyt7"]

[ext_resource type="Script" path="res://scenes/Enemies/enemy.gd" id="1_xd6u6"]
[ext_resource type="Script" path="res://scripts/States/state_machine.gd" id="2_84yk5"]
[ext_resource type="Script" path="res://scenes/Enemies/States/EnemyIdle.gd" id="3_1vht4"]
[ext_resource type="Script" path="res://scenes/Enemies/States/EnemyWander.gd" id="4_eqj7p"]
[ext_resource type="Script" path="res://scenes/Enemies/States/EnemyChase.gd" id="5_qbv71"]
[ext_resource type="Script" path="res://scenes/Enemies/States/EnemyAttack.gd" id="6_05tvx"]
[ext_resource type="Script" path="res://scenes/Enemies/States/EnemySwitch.gd" id="7_1bef8"]
[ext_resource type="Script" path="res://scenes/Enemies/States/EnemyDamage.gd" id="8_hgynt"]
[ext_resource type="Texture2D" uid="uid://colaatnlacdh5" path="res://assets/sprites/Minifantasy_Creatures_Assets/Beasts/Bat/BatAttack.png" id="10_cpf3p"]
[ext_resource type="Texture2D" uid="uid://c5nmb6whcyhkx" path="res://assets/sprites/Minifantasy_Creatures_Assets/Beasts/Bat/BatDmg.png" id="10_lwf74"]
[ext_resource type="Texture2D" uid="uid://bd53j40yfxwl5" path="res://assets/sprites/Minifantasy_Creatures_Assets/Beasts/Bat/BatFlyIdle.png" id="11_688os"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_bwl2k"]
size = Vector2(11, 4)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_frfmx"]
size = Vector2(27, 16)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7ak4m"]
size = Vector2(89, 12)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_w5wbo"]
size = Vector2(11, 12)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7takv"]
size = Vector2(10, 10)

[sub_resource type="AtlasTexture" id="AtlasTexture_71bum"]
atlas = ExtResource("10_cpf3p")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_to6xy"]
atlas = ExtResource("10_cpf3p")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_kwvpc"]
atlas = ExtResource("10_cpf3p")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_82c0d"]
atlas = ExtResource("10_cpf3p")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_0iiw5"]
atlas = ExtResource("10_lwf74")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_wuuaa"]
atlas = ExtResource("10_lwf74")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_kl0hm"]
atlas = ExtResource("10_lwf74")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_vuf6w"]
atlas = ExtResource("10_lwf74")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_0gy67"]
atlas = ExtResource("11_688os")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_v3v36"]
atlas = ExtResource("11_688os")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_qrb6i"]
atlas = ExtResource("11_688os")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_h1gmp"]
atlas = ExtResource("11_688os")
region = Rect2(32, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_datdj"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_71bum")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_to6xy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kwvpc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_82c0d")
}],
"loop": false,
"name": &"attack",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_0iiw5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wuuaa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kl0hm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vuf6w")
}],
"loop": false,
"name": &"damage",
"speed": 4.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_0gy67")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v3v36")
}],
"loop": false,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_qrb6i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h1gmp")
}],
"loop": true,
"name": &"run",
"speed": 5.0
}]

[node name="Enemy" type="CharacterBody2D"]
script = ExtResource("1_xd6u6")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-0.5, -10)
shape = SubResource("RectangleShape2D_bwl2k")

[node name="FSM" type="Node" parent="." node_paths=PackedStringArray("initial_state")]
script = ExtResource("2_84yk5")
initial_state = NodePath("EnemyWander")

[node name="EnemyIdle" type="Node" parent="FSM" node_paths=PackedStringArray("animated_sprite")]
script = ExtResource("3_1vht4")
animated_sprite = NodePath("../../Pivot/AnimatedSprite2D")

[node name="Timer" type="Timer" parent="FSM/EnemyIdle"]

[node name="EnemyWander" type="Node" parent="FSM" node_paths=PackedStringArray("animated_sprite", "enemy", "pivot")]
script = ExtResource("4_eqj7p")
animated_sprite = NodePath("../../Pivot/AnimatedSprite2D")
enemy = NodePath("../..")
pivot = NodePath("../../Pivot")
voador = true

[node name="EnemyChase" type="Node" parent="FSM" node_paths=PackedStringArray("animated_sprite", "enemy")]
script = ExtResource("5_qbv71")
animated_sprite = NodePath("../../Pivot/AnimatedSprite2D")
enemy = NodePath("../..")
voador = true

[node name="EnemyAttack" type="Node" parent="FSM" node_paths=PackedStringArray("animated_sprite", "enemy")]
script = ExtResource("6_05tvx")
animated_sprite = NodePath("../../Pivot/AnimatedSprite2D")
enemy = NodePath("../..")

[node name="EnemySwitch" type="Node" parent="FSM"]
script = ExtResource("7_1bef8")

[node name="EnemyDamage" type="Node" parent="FSM" node_paths=PackedStringArray("animated_sprite")]
script = ExtResource("8_hgynt")
animated_sprite = NodePath("../../Pivot/AnimatedSprite2D")

[node name="Pivot" type="Node2D" parent="."]

[node name="AreaAttack" type="Area2D" parent="Pivot"]
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Pivot/AreaAttack"]
position = Vector2(5.5, -10)
shape = SubResource("RectangleShape2D_frfmx")
debug_color = Color(0.957771, 0.170595, 0.30209, 0.42)

[node name="AreaChase" type="Area2D" parent="Pivot"]
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Pivot/AreaChase"]
position = Vector2(38.5, -10)
shape = SubResource("RectangleShape2D_7ak4m")

[node name="AreaCollide" type="Area2D" parent="Pivot"]
collision_layer = 4
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Pivot/AreaCollide"]
position = Vector2(-0.5, -10)
shape = SubResource("RectangleShape2D_w5wbo")
debug_color = Color(0.659138, 0.515126, 0, 0.42)

[node name="AreaGround" type="Area2D" parent="Pivot"]
collision_mask = 513

[node name="CollisionShape2D" type="CollisionShape2D" parent="Pivot/AreaGround"]
position = Vector2(9, 1)
shape = SubResource("RectangleShape2D_7takv")
debug_color = Color(0, 0.644914, 0.271235, 0.42)

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="Pivot"]
position = Vector2(0, -7)
sprite_frames = SubResource("SpriteFrames_datdj")
animation = &"run"

[connection signal="body_entered" from="Pivot/AreaAttack" to="FSM/EnemyChase" method="_on_area_attack_body_entered"]
[connection signal="body_exited" from="Pivot/AreaAttack" to="FSM/EnemyChase" method="_on_area_attack_body_exited"]
[connection signal="body_entered" from="Pivot/AreaChase" to="FSM/EnemyIdle" method="_on_area_chase_body_entered"]
[connection signal="body_entered" from="Pivot/AreaChase" to="FSM/EnemyWander" method="_on_area_chase_body_entered"]
[connection signal="body_entered" from="Pivot/AreaChase" to="FSM/EnemyChase" method="_on_area_chase_body_entered"]
[connection signal="body_exited" from="Pivot/AreaChase" to="FSM/EnemyChase" method="_on_area_chase_body_exited"]
[connection signal="area_entered" from="Pivot/AreaCollide" to="." method="_on_area_collide_area_entered"]
[connection signal="body_entered" from="Pivot/AreaGround" to="FSM/EnemyWander" method="_on_area_ground_body_entered"]
[connection signal="body_entered" from="Pivot/AreaGround" to="FSM/EnemyChase" method="_on_area_ground_body_entered"]
[connection signal="body_exited" from="Pivot/AreaGround" to="FSM/EnemyWander" method="_on_area_ground_body_exited"]
[connection signal="body_exited" from="Pivot/AreaGround" to="FSM/EnemyChase" method="_on_area_ground_body_exited"]
